Fixes to the layout and views

--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -4,9 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Compubuilt</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+@*    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />*@
     @*<link rel="stylesheet" href="~/Compubuilt.styles.css" asp-append-version="true" />*@
+    
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="~/css/bootstrap.min.css" type="text/css">
@@ -18,17 +23,7 @@
     <link rel="stylesheet" href="~/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/style.css" type="text/css">
 
-    <!-- Custom Scripts for this template -->
-    <script src="~/js/jquery-3.3.1.min.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
-    <script src="~/js/jquery.magnific-popup.min.js"></script>
-    <script src="~/js/jquery-ui.min.js"></script>
-    <script src="~/js/jquery.countdown.min.js"></script>
-    <script src="~/js/mixitup.min.js"></script>
-    <script src="~/js/jquery.slicknav.js"></script>
-    <script src="~/js/owl.carousel.min.js"></script>
-    <script src="~/js/jquery.nicescroll.min.js"></script>
-    <script src="~/js/main.js"></script>
+
 
 </head>
 <body>
@@ -90,7 +85,7 @@
         <div class="row">
             <div class="col-xl-3 col-lg-2">
                 <div class="header__logo">
-                    <a href="#"><img src="~/photos/logo.png" alt=""></a>
+                    <a asp-area="" asp-controller="Home" asp-action="Index"><img src="photos/logo.png" alt=""></a>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-7">
@@ -109,17 +104,27 @@
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li>
+                            <a href="#">System Management</a>
+                            <ul class="dropdown">
+                                <li><a asp-area="" asp-controller="PaymentTypes" asp-action="Index">Payment Methods</a></li>
+                                <li><a asp-area="" asp-controller="DeliveryTypes" asp-action="Index">Delivery Methods</a></li>
+                                <li><a asp-area="" asp-controller="Customers" asp-action="Index">Users</a></li>
+                                <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a href="#">Blog Details</a></li>
+                            </ul>
+                        </li>
+                        @*<li><a href="#">Blog</a></li>*@
+                        @*<li><a href="#">Contact</a></li>*@
                     </ul>
                 </nav>
             </div>
             <div class="col-lg-3">
                 <div class="header__right">
-                    <div class="header__right__auth">
-                        <a href="#">Login</a>
-                        <a href="#">Register</a>
-                    </div>
+
+                    <partial name="_LoginPartial"/>
+
                     <ul class="header__right__widget">
                         <li><span class="icon_search search-switch"></span></li>
                         <li>
@@ -144,20 +149,76 @@
     </div>
 </header>
 
-<div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+@*<div class="container">*@
+
+@*<div id="preloder">
+    <div class="loader"></div>
+</div>*@
+
+<div class="offcanvas-menu-overlay"></div>
+<div class="offcanvas-menu-wrapper">
+    <div class="offcanvas__close">+</div>
+    <ul class="offcanvas__widget">
+        <li><span class="icon_search search-switch"></span></li>
+        <li>
+            <a href="#">
+                <span class="icon_heart_alt"></span>
+                <div class="tip">2</div>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="icon_bag_alt"></span>
+                <div class="tip">2</div>
+            </a>
+        </li>
+    </ul>
+    <div class="offcanvas__logo">
+        <a href="#"><img src="photos/logo.png" alt=""></a>
     </div>
+    <div id="mobile-menu-wrap"></div>
+    <div class="offcanvas__auth">
+        <a href="#">Login</a>
+        <a href="#">Register</a>
+    </div>
+</div>
+
+<main role="main" >
+            @RenderBody()
+            
+            <div class="search-model">
+                <div class="h-100 d-flex align-items-center justify-content-center">
+                    <div class="search-close-switch">+</div>
+                    <form class="search-model-form">
+                        <input type="text" id="search-input" placeholder="Search here.....">
+                    </form>
+                </div>
+            </div>
+
+        </main>
+    @*</div>*@
 
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - Compubuilt - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+@*    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+<script src="~/js/site.js" asp-append-version="true"></script>*@
+
+<!-- Custom Scripts for this template -->
+<script src="~/js/jquery-3.3.1.min.js"></script>
+<script src="~/js/bootstrap.min.js"></script>
+<script src="~/js/jquery.magnific-popup.min.js"></script>
+<script src="~/js/jquery-ui.min.js"></script>
+<script src="~/js/jquery.countdown.min.js"></script>
+<script src="~/js/mixitup.min.js"></script>
+<script src="~/js/jquery.slicknav.js"></script>
+<script src="~/js/owl.carousel.min.js"></script>
+<script src="~/js/jquery.nicescroll.min.js"></script>
+<script src="~/js/main.js"></script>
+
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
