--- a/Compubuilt/Views/Shared/_LoginPartial.cshtml
+++ b/Compubuilt/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,13 @@
 ﻿@using System.Security.Principal
 
-<ul class="navbar-nav">
-@if (User.Identity?.IsAuthenticated == true)
-{
+<div class="header__right__auth">
+    @if (User.Identity?.IsAuthenticated == true)
+    {
         <span class="navbar-text text-dark">Hello @User.Identity?.Name!</span>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Sign out</a>
-        </li>
-}
-else
-{
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">Sign in</a>
-        </li>
-}
-</ul>
+        <a asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Sign out</a>
+    }
+    else
+    {
+        <a asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn"> <span class="icon_profile"></span> Sign in</a>
+    }
+</div>
