--- a/Compubuilt/Views/ProductCatalog/Index.cshtml
+++ b/Compubuilt/Views/ProductCatalog/Index.cshtml
@@ -242,10 +242,10 @@
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="photos/shop/shop-1.jpg">
+                        <div class="product__item__pic set-bg" data-setbg="@Html.DisplayFor(modelItem => product.ProductPhotoUrl)">
                             <div class="label new">New</div>
                             <ul class="product__hover">
-                                <li><a href="photos/shop/shop-1.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
+                                <li><a href="@Html.DisplayFor(modelItem => product.ProductPhotoUrl)" class="image-popup"><span class="arrow_expand"></span></a></li>
                                 <li><a href="#"><span class="icon_heart_alt"></span></a></li>
                                 <li><a href="#"><span class="icon_bag_alt"></span></a></li>
                             </ul>
@@ -253,6 +253,7 @@
                         <div class="product__item__text">
                             <h6><a href="#"> @Html.DisplayFor(modelItem => product.ProductName)</a></h6>
                             <div class="rating">
+                                @Html.DisplayFor(modelItem => product.RatingValue)
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
