--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -111,6 +111,7 @@
                                 <li><a asp-area="" asp-controller="DeliveryTypes" asp-action="Index">Delivery Methods</a></li>
                                 <li><a asp-area="" asp-controller="Customers" asp-action="Index">Users</a></li>
                                 <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
+                                <li><a asp-area="" asp-controller="ProductImages" asp-action="Index">Product Images</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
