Added product page

--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -92,10 +92,10 @@
                 <nav class="header__menu">
                     <ul>
                         <li @*class="active"*@><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a href="#">Women’s</a></li>
-                        <li><a href="#">Men’s</a></li>
+@*                        <li><a href="#">Women’s</a></li>
+                        <li><a href="#">Men’s</a></li>*@
                         <li><a asp-area="" asp-controller="ProductCatalog" asp-action="Index">Shop</a></li>
-                        <li>
+@*                        <li>
                             <a href="#">Pages</a>
                             <ul class="dropdown">
                                 <li><a href="#">Product Details</a></li>
@@ -103,7 +103,7 @@
                                 <li><a href="#">Checkout</a></li>
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
-                        </li>
+                        </li>*@
                         <li>
                             <a href="#">System Management</a>
                             <ul class="dropdown">
