--- a/Compubuilt/Views/ProductCatalog/Index.cshtml
+++ b/Compubuilt/Views/ProductCatalog/Index.cshtml
@@ -251,7 +251,7 @@
                             </ul>
                         </div>
                         <div class="product__item__text">
-                            <h6><a href="#"> @Html.DisplayFor(modelItem => product.ProductName)</a></h6>
+                            <h6><a asp-controller="Products" asp-action="ProductPage" asp-route-id="@product.ProductId"> @Html.DisplayFor(modelItem => product.ProductName)</a></h6>
                             <div class="rating">
                                 @Html.DisplayFor(modelItem => product.RatingValue)
                                 <i class="fa fa-star"></i>
