--- a/Compubuilt/Views/Products/Index.cshtml
+++ b/Compubuilt/Views/Products/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Compubuilt.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Product Management";
 }
 
-<h1>Index</h1>
+<h1>Product Management</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
