--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -135,9 +135,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a asp-area="" asp-controller="ShoppingCart" asp-action="Index">
                                 <span class="icon_bag_alt"></span>
-                                <div class="tip">2</div>
+@*                                <div class="tip">2</div>*@
                             </a>
                         </li>
                     </ul>
