--- a/Compubuilt/Views/ProductCatalog/Index.cshtml
+++ b/Compubuilt/Views/ProductCatalog/Index.cshtml
@@ -247,7 +247,7 @@
                             <ul class="product__hover">
                                 <li><a href="@Html.DisplayFor(modelItem => product.ProductPhotoUrl)" class="image-popup"><span class="arrow_expand"></span></a></li>
                                 <li><a href="#"><span class="icon_heart_alt"></span></a></li>
-                                <li><a href="#"><span class="icon_bag_alt"></span></a></li>
+                                <li><a asp-controller="ShoppingCart" asp-action="AddItemToCart" asp-route-id="@product.ProductId" asp-route-quantity="1"><span class="icon_bag_alt"></span></a></li>
                             </ul>
                         </div>
                         <div class="product__item__text">
