Added Customer Addresses Controller and Views, added OrderSummary View Component, added Breadcrubms Partial View,

--- a/Compubuilt/Views/ShoppingCart/Index.cshtml
+++ b/Compubuilt/Views/ShoppingCart/Index.cshtml
@@ -4,20 +4,7 @@
     ViewData["Title"] = "Shopping Cart";
 }
 
-    <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__links">
-                        <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                        <span>Shopping cart</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb End -->
+    <partial name="_Breadcrumbs"/>
 
     <!-- Shop Cart Section Begin -->
     <section class="shop-cart spad">
