--- a/Compubuilt/Views/ProductCatalog/Index.cshtml
+++ b/Compubuilt/Views/ProductCatalog/Index.cshtml
@@ -5,18 +5,7 @@
 }
 
     <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__links">
-                        <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                        <span>Shop</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <partial name="_Breadcrumbs"/>
     <!-- Breadcrumb End -->
 
     <!-- Shop Section Begin -->
