--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -109,7 +109,8 @@
                             <ul class="dropdown">
                                 <li><a asp-area="" asp-controller="PaymentTypes" asp-action="Index">Payment Methods</a></li>
                                 <li><a asp-area="" asp-controller="DeliveryTypes" asp-action="Index">Delivery Methods</a></li>
-                                <li><a asp-area="" asp-controller="Customers" asp-action="Index">Users</a></li>
+                                <li><a asp-area="" asp-controller="Customers" asp-action="Index">Customers</a></li>
+                                <li><a asp-area="" asp-controller="CustomerAddresses" asp-action="Index">Customer Addresses</a></li>
                                 <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                                 <li><a asp-area="" asp-controller="ProductImages" asp-action="Index">Product Images</a></li>
                                 <li><hr class="dropdown-divider"></li>
