Removed Address Type, added ability to edit customer address, added customer detail page,

--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -117,6 +117,14 @@
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="#">My Profile</a>
+                            <ul class="dropdown">
+                                <li><a asp-area="" asp-controller="" asp-action="">Order History</a></li>
+                                <li><a asp-area="" asp-controller="" asp-action="">Address Settings</a></li>
+                                <li><a asp-area="" asp-controller="Customers" asp-action="CustomerDetailsEdit">Profile Settings</a></li>
+                            </ul>
+                        </li>
                         @*<li><a href="#">Blog</a></li>*@
                         @*<li><a href="#">Contact</a></li>*@
                     </ul>
