--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -113,6 +113,7 @@
                                 <li><a asp-area="" asp-controller="CustomerAddresses" asp-action="Index">Customer Addresses</a></li>
                                 <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                                 <li><a asp-area="" asp-controller="ProductImages" asp-action="Index">Product Images</a></li>
+                                <li><a asp-area="" asp-controller="PromotionalCodes" asp-action="Index">Promotional Codes</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
