--- a/Compubuilt/Views/Shared/Components/CustomerAddressEdit/CustomerAddressEdit.cshtml
+++ b/Compubuilt/Views/Shared/Components/CustomerAddressEdit/CustomerAddressEdit.cshtml
@@ -3,14 +3,14 @@
 
 <div class="col-lg-8">
     <form asp-action="SaveAddressChanges" asp-controller="CustomerAddresses" method="post" class="checkout__form">
-        <h5>Billing detail</h5>
+        <h5>Address details</h5>
         @*        <div class="col-lg-12">
             <h6 class="coupon__link">Address information have been successfully updated.</h6>
         </div>*@
-        @if (Model.CustomerAddressId != null)
+@*        @if (Model.CustomerAddressId != null)
         {
             <p>Delivery data has been automatically filled based on the address information saved in your profile.</p>
-        }
+        }*@
         <div class="row">
             @*        <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="checkout__form__input">
