Added Payment and Delivery when placing an order

--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -110,6 +110,7 @@
                                 <li><a asp-area="" asp-controller="PaymentTypes" asp-action="Index">Payment Methods</a></li>
                                 <li><a asp-area="" asp-controller="DeliveryTypes" asp-action="Index">Delivery Methods</a></li>
                                 <li><a asp-area="" asp-controller="Customers" asp-action="Index">Customers</a></li>
+                                <li><a asp-area="" asp-controller="Orders" asp-action="Index">Orders</a></li>
                                 <li><a asp-area="" asp-controller="CustomerAddresses" asp-action="Index">Customer Addresses</a></li>
                                 <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                                 <li><a asp-area="" asp-controller="ProductImages" asp-action="Index">Product Images</a></li>
