--- a/Compubuilt/Views/Products/Create.cshtml
+++ b/Compubuilt/Views/Products/Create.cshtml
@@ -32,6 +32,11 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+@*            <div class="form-group">
+                <label asp-for="AverageRatingValue" class="control-label"></label>
+                <input asp-for="AverageRatingValue" class="form-control" />
+                <span asp-validation-for="AverageRatingValue" class="text-danger"></span>
+            </div>*@
             <div class="form-group">
                 <label asp-for="ProductCategoryId" class="control-label"></label>
                 <select asp-for="ProductCategoryId" class ="form-control" asp-items="ViewBag.ProductCategoryId"></select>
